Corrected footer gap

--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ a {
 /* Footer */
 footer {
     margin-bottom: 1.5625rem;
-    gap: 1.25rem;
+    gap: 1.5625rem;
     font-weight: 400;
 }
 
